# NN-Lib

./: .gitignore  README.md  install.sh
dev/include/Application/: App.hpp
dev/include/Engine/: Engine.hpp
dev/src/: main.cpp
dev/src/Application/: App.cpp
dev/src/Engine/: Engine.cpp  TimeManager.cpp
dev/src/NeuralNetwork/: Matrix.cpp  NeuralNetwork.cpp
example/: CMakeLists.txt  main.cpp
